--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <a class="nav-item nav-link" href="#about">About</a>
         <a class="nav-item nav-link" href="#team">Team</a>
         <a class="nav-item nav-link" href="">Virtues</a>
-        <a class="nav-item nav-link" href="">Login</a>
-        <a class="nav-item nav-link" href="">Sign Up</a>
+        <a class="nav-item nav-link" href="login.html">Login</a>
+        <a class="nav-item nav-link" href="login.html">Sign Up</a>
       </div>
     </div>
   </nav>
