feat(page-designs): Finish developing front-end for the web app
Front end completed

--- a/index.html
+++ b/index.html
@@ -123,9 +123,182 @@
         <img src="./Resources/images/team.svg" alt="drone" class="rvp-side-image">
       </div>
     </div>
+    <div class="container-fluid">
+      <div class="row justify-content-center rvp-who-row">
+        <div class="col col-12 col-md-6 col-lg-3">
+          <div class="rvp-card">
+            <div class="rvp-person text-center">
+              <img src="./Resources/images/ritvick.jpg" alt="ritvick">
+            </div>
+            <h4 class="text-center rvp-name">Ritvick V. Pandey</h4>
+            <h5 class="text-center rvp-name">RA181100301698</h5>
+            <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut
+              labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea
+              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur.
+            </p>
+          </div>
+        </div>
+        <div class="col col-12 col-md-6 col-lg-3">
+          <div class="rvp-card">
+            <div class="rvp-person text-center">
+              <img src="./Resources/images/ritvick.jpg" alt="ritvick">
+            </div>
+            <h4 class="text-center rvp-name">Ritvick V. Pandey</h4>
+            <h5 class="text-center rvp-name">RA181100301698</h5>
+            <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut
+              labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea
+              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur.
+            </p>
+          </div>
+        </div>
+        <div class="col col-12 col-md-6 col-lg-3">
+          <div class="rvp-card">
+            <div class="rvp-person text-center">
+              <img src="./Resources/images/ritvick.jpg" alt="ritvick">
+            </div>
+            <h4 class="text-center rvp-name">Ritvick V. Pandey</h4>
+            <h5 class="text-center rvp-name">RA181100301698</h5>
+            <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut
+              labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea
+              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur.
+            </p>
+          </div>
+        </div>
+        <div class="col col-12 col-md-6 col-lg-3">
+          <div class="rvp-card">
+            <div class="rvp-person text-center">
+              <img src="./Resources/images/ritvick.jpg" alt="ritvick">
+            </div>
+            <h4 class="text-center rvp-name">Ritvick V. Pandey</h4>
+            <h5 class="text-center rvp-name">RA181100301698</h5>
+            <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut
+              labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea
+              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
+  <div class="container-fluid rvp-why-is-it-worth" id="virtues">
+    <div class="row justify-content-center align-items-center">
+      <div class="col col-12 col-lg-6 d-lg-none">
+        <h3 class="rvp-h3">Why is it worth?</h3>
+        <p class="rvp-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+          eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+          mollit anim id est laborum.
+        </p>
+      </div>
+      <div class="col col-12 col-lg-6">
+        <div class="rvp-outer-box">
+          <div class="rvp-inner-box box-set-1">
+            <div class="box-set-3 box-1">
+              <div>
+                <h4 class="rvp-virtue-head">Values</h4>
+                <p class="rvp-virtue-p">chola chola chola chola chola chola chola chola chola chola chola chola chola
+                  chola chola chola chola
+                  chola chola chola chola chola chola chola chola chola chola chola chola chola chola chola chola chola
+                  chola chola chola chola chola chola chola chola chola chola chola chola
+                </p>
+              </div>
+            </div>
+            <div class="box-set-4 box-2">
+              <div>
+                <h4 class="rvp-virtue-head">Goals</h4>
+                <p class="rvp-virtue-p">jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola
+                  jhola jhola jhola jhola
+                  jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola
+                  jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="rvp-inner-box box-set-2">
+            <div class="box-set-3 box-3">
+              <div>
+                <h4 class="rvp-virtue-head">Virtues</h4>
+                <p class="rvp-virtue-p">lola lola lola lola lola lola lola lola lola lola lola lola lola lola lola lola
+                  lola lola lola lola
+                  lola lola lola lola lola lola lola lola lola lola lola lola lola lola lola lola lola lola lola lola
+                  lola
+                  lola lola lola lola lola lola lola lola lola lola lola lola lola lola
+                </p>
+              </div>
+            </div>
+            <div class="box-set-4 box-4">
+              <div>
+                <h4 class="rvp-virtue-head">Mission</h4>
+                <p class="rvp-virtue-p">bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola
+                  bhola bhola bhola bhola
+                  bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola
+                  bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col col-12 col-lg-6 d-none d-lg-block">
+        <h3 class="rvp-h3">Why is it worth?</h3>
+        <p class="rvp-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+          eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+          mollit anim id est laborum.
+        </p>
+      </div>
+    </div>
+  </div>
 
+  <div class="container-fluid">
+    <div class="row justify-content-center align-items-center rvp-footer">
+      <div class="col col-12 col-lg-4">
+        <h2 class="rvp-foot-logo text-center">SAFE</h2>
+      </div>
+      <div class="col col-12 col-lg-4">
+        <ul class="rvp-foot-list text-center">
+          <a href="#about">
+            <li>About</li>
+          </a>
+          <a href="#team">
+            <li>Team</li>
+          </a>
+          <a href="#virtues">
+            <li>Virtues</li>
+          </a>
+          <a href="">
+            <li>Login</li>
+          </a>
+          <a href="">
+            <li>Sign up</li>
+          </a>
+        </ul>
+      </div>
+      <div class="col col-12 col-lg-4">
+        <p class="text-center rvp-copyright">Sketched and encoded with a spirit to learn
+          by ©Team Hackos 2020</p>
+      </div>
+    </div>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
