feat(content-changes): update content
Replaced lorem Ipsum with meaningful content

--- a/index.html
+++ b/index.html
@@ -75,12 +75,14 @@
       </div>
       <div class="col col-12 col-lg-6">
         <h3 class="rvp-h3">What we do!</h3>
-        <p class="rvp-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et
-          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-          nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-          id est laborum.</p>
+        <p class="rvp-p">
+          On May 24, 2019 a short circuit caused the fire in a coaching complex which took the life of about 15
+          children, and left many injured. The Surat Fire incident. Those lives may have been saved, were it not for the
+          traffic that obstructed the proper help from reaching in time. What we plan to do is create a system which
+          warns the users of a sudden disaster and suggests them to take an alternate route. Thus preventing a traffic
+          jam around the location and aiding in faster rescue and disaster Mitigation response. At the same time, it
+          protects the user from getting trapped in such a calamity.
+        </p>
       </div>
       <div class="col col-12 col-lg-6 text-center d-none d-lg-block">
         <img src="./Resources/images/drone.png" alt="drone" class="rvp-side-image">
@@ -95,12 +97,14 @@
       </div>
       <div class="col col-12 col-lg-6">
         <h3 class="rvp-h3">How we do it!</h3>
-        <p class="rvp-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et
-          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-          nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-          id est laborum.</p>
+        <p class="rvp-p">
+          It all starts with the user registration on our portal. The user fills a basic form and provides us with his
+          contact details. If something unfortunate occurs, the traffic cameras around this locality focus on taking
+          snaps of the number plate of the vehicles. These snaps are then used to distinguish emergency and non
+          emergency vehicles. The numbers from the civilian vehicle number plates are extracted. If we spot any of our
+          beloved clients heading towards such a danger we immediately send them a message, or a mail to help them
+          re-route their vehicles.
+        </p>
       </div>
     </div>
   </div>
@@ -112,12 +116,12 @@
       </div>
       <div class="col col-12 col-lg-6">
         <h3 class="rvp-h3">Who we are!</h3>
-        <p class="rvp-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in cididunt
-          utlabore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea
-          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-          nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-          id est laborum.</p>
+        <p class="rvp-p">
+          This initiative to save lives is brought together by four beating hearts which beat just like our logo at the
+          top does in every seven seconds. Souls which have aspirations too big to be held inside their minds, and
+          visions bigger than their sight may permit. But nonetheless, we intend to shoot for the stars, and perhaps
+          land on the moon.
+        </p>
       </div>
       <div class="col col-12 col-lg-6 text-center d-none d-lg-block">
         <img src="./Resources/images/team.svg" alt="drone" class="rvp-side-image">
@@ -132,6 +136,21 @@
             </div>
             <h4 class="text-center rvp-name">Ritvick V. Pandey</h4>
             <h5 class="text-center rvp-name">RA181100301698</h5>
+            <p class="text-justify">
+              A website speaks volumes about the ideals of an organization. Which is why, it should be
+              brief, crisp and to the point to make an impact. It should have a design easy to understood and appeals to
+              the audience. It creates the first impression, and first impressions are often the last. Therefore I
+              tried to build a UI/UX, which isn't just concise and ultra fast, but also soothing to the eyes.
+            </p>
+          </div>
+        </div>
+        <div class="col col-12 col-md-6 col-lg-3">
+          <div class="rvp-card">
+            <div class="rvp-person text-center">
+              <img src="./Resources/images/ritvick.jpg" alt="ritvick">
+            </div>
+            <h4 class="text-center rvp-name">Shubham Saxena</h4>
+            <h5 class="text-center rvp-name">RA181100301691</h5>
             <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
               incididunt ut
               labore et
@@ -147,8 +166,8 @@
             <div class="rvp-person text-center">
               <img src="./Resources/images/ritvick.jpg" alt="ritvick">
             </div>
-            <h4 class="text-center rvp-name">Ritvick V. Pandey</h4>
-            <h5 class="text-center rvp-name">RA181100301698</h5>
+            <h4 class="text-center rvp-name">Devangi Purkayastha</h4>
+            <h5 class="text-center rvp-name">RA181100301689</h5>
             <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
               incididunt ut
               labore et
@@ -164,25 +183,8 @@
             <div class="rvp-person text-center">
               <img src="./Resources/images/ritvick.jpg" alt="ritvick">
             </div>
-            <h4 class="text-center rvp-name">Ritvick V. Pandey</h4>
-            <h5 class="text-center rvp-name">RA181100301698</h5>
-            <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut
-              labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur.
-            </p>
-          </div>
-        </div>
-        <div class="col col-12 col-md-6 col-lg-3">
-          <div class="rvp-card">
-            <div class="rvp-person text-center">
-              <img src="./Resources/images/ritvick.jpg" alt="ritvick">
-            </div>
-            <h4 class="text-center rvp-name">Ritvick V. Pandey</h4>
-            <h5 class="text-center rvp-name">RA181100301698</h5>
+            <h4 class="text-center rvp-name">Sarthak Purohit</h4>
+            <h5 class="text-center rvp-name">RA18110030</h5>
             <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
               incididunt ut
               labore et
@@ -201,11 +203,10 @@
     <div class="row justify-content-center align-items-center">
       <div class="col col-12 col-lg-6 d-lg-none">
         <h3 class="rvp-h3">Why is it worth?</h3>
-        <p class="rvp-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-          eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-          mollit anim id est laborum.
+        <p class="rvp-p">
+          We believe our small incentives today will create great revolutions tomorrow. So this is our first step
+          towards a future where each se second reduced is equivalent to a life saved. Thus there are some core values
+          that our organizaton follows to provide our loved ones, the care they deserve.
         </p>
       </div>
       <div class="col col-12 col-lg-6">
@@ -213,21 +214,18 @@
           <div class="rvp-inner-box box-set-1">
             <div class="box-set-3 box-1">
               <div>
-                <h4 class="rvp-virtue-head">Values</h4>
-                <p class="rvp-virtue-p">chola chola chola chola chola chola chola chola chola chola chola chola chola
-                  chola chola chola chola
-                  chola chola chola chola chola chola chola chola chola chola chola chola chola chola chola chola chola
-                  chola chola chola chola chola chola chola chola chola chola chola chola
+                <h4 class="rvp-virtue-head">Moto</h4>
+                <p class="rvp-virtue-p">
+                  "Save time, save lives."
                 </p>
               </div>
             </div>
             <div class="box-set-4 box-2">
               <div>
                 <h4 class="rvp-virtue-head">Goals</h4>
-                <p class="rvp-virtue-p">jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola
-                  jhola jhola jhola jhola
-                  jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola
-                  jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola jhola
+                <p class="rvp-virtue-p">
+                  Protection under surveillance. We intend to build a world which can face any challenge thrown at it
+                  with optimum efficiency, with the power of a simple roadways surveillance system.
                 </p>
               </div>
             </div>
@@ -236,21 +234,18 @@
             <div class="box-set-3 box-3">
               <div>
                 <h4 class="rvp-virtue-head">Virtues</h4>
-                <p class="rvp-virtue-p">lola lola lola lola lola lola lola lola lola lola lola lola lola lola lola lola
-                  lola lola lola lola
-                  lola lola lola lola lola lola lola lola lola lola lola lola lola lola lola lola lola lola lola lola
-                  lola
-                  lola lola lola lola lola lola lola lola lola lola lola lola lola lola
+                <p class="rvp-virtue-p">
+                  Ambition, Empathy, Responsibility
                 </p>
               </div>
             </div>
             <div class="box-set-4 box-4">
               <div>
                 <h4 class="rvp-virtue-head">Mission</h4>
-                <p class="rvp-virtue-p">bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola
-                  bhola bhola bhola bhola
-                  bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola
-                  bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola bhola
+                <p class="rvp-virtue-p">
+                  Certain disasters cannot be predicted and no number of precautions can help us mitigate them, if we're
+                  too slow to react. Our mission is to create a platform which helps people find a way to decrease the
+                  response time and save more lives.
                 </p>
               </div>
             </div>
@@ -259,11 +254,10 @@
       </div>
       <div class="col col-12 col-lg-6 d-none d-lg-block">
         <h3 class="rvp-h3">Why is it worth?</h3>
-        <p class="rvp-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-          eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-          mollit anim id est laborum.
+        <p class="rvp-p">
+          We believe our small incentives today will create great revolutions tomorrow. So this is our first step
+          towards a future where each se second reduced is equivalent to a life saved. Thus there are some core values
+          that our organizaton follows to provide our loved ones, the care they deserve.
         </p>
       </div>
     </div>
