fix(attach-links): attach page links
Attached links to the footer

--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@
           <a href="#virtues">
             <li>Virtues</li>
           </a>
-          <a href="">
+          <a href="login.html">
             <li>Login</li>
           </a>
-          <a href="">
+          <a href="login.html">
             <li>Sign up</li>
           </a>
         </ul>
